@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2023 Bachmann electronic GmbH and others.
+ * Copyright (c) 2023, 2025 Bachmann electronic GmbH and others.
  *
  * This program and the accompanying materials are made
  * available under the terms of the Eclipse Public License 2.0
@@ -12,7 +12,7 @@
  *     Alexander Fedorov (ArSysOp) - extract headless part
  *******************************************************************************/
 
-package org.eclipse.cdt.lsp.clangd.tests;
+package org.eclipse.cdt.lsp.clangd.tests.internal.config;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
@@ -26,21 +26,22 @@ import java.io.IOException;
 import java.io.PrintWriter;
 import java.io.UnsupportedEncodingException;
 import java.nio.file.Files;
-import java.util.Arrays;
 
 import org.eclipse.cdt.core.settings.model.CProjectDescriptionEvent;
 import org.eclipse.cdt.core.settings.model.ICBuildSetting;
 import org.eclipse.cdt.core.settings.model.ICProjectDescription;
 import org.eclipse.cdt.internal.core.settings.model.CConfigurationDescriptionCache;
-import org.eclipse.cdt.lsp.clangd.ClangdCProjectDescriptionListener;
-import org.eclipse.cdt.lsp.clangd.internal.config.ClangdConfigurationFileManager;
+import org.eclipse.cdt.lsp.clangd.internal.config.ClangdCompilationDatabaseSetter;
+import org.eclipse.cdt.lsp.clangd.internal.config.ClangdCompilationDatabaseSetterBase;
+import org.eclipse.cdt.lsp.clangd.tests.TestUtils;
 import org.eclipse.core.resources.IFile;
 import org.eclipse.core.resources.IProject;
 import org.eclipse.core.resources.IResource;
+import org.eclipse.core.resources.IResourceChangeEvent;
 import org.eclipse.core.runtime.CoreException;
 import org.eclipse.core.runtime.NullProgressMonitor;
+import org.eclipse.core.runtime.OperationCanceledException;
 import org.eclipse.core.runtime.Path;
-import org.eclipse.ui.PlatformUI;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.BeforeEach;
@@ -48,17 +49,13 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.TestInfo;
 import org.junit.jupiter.api.io.TempDir;
 
-final class ClangdConfigurationFileManagerTest {
+final class ClangdCompilationDatabaseSetterTest {
 
 	private static final String RELATIVE_DIR_PATH_BUILD_DEFAULT = "build" + File.separator + "default";
 	private static final String RELATIVE_DIR_PATH_BUILD_DEBUG = "build" + File.separator + "debug";
-	private static final String EXPANDED_CDB_SETTING = "CompileFlags: {Add: -ferror-limit=500, CompilationDatabase: %s, Compiler: g++}\nDiagnostics:\n  ClangTidy: {Add: modernize*, Remove: modernize-use-trailing-return-type}\n";
+	private static final String EXPANDED_CDB_SETTING = "CompileFlags: {Add: -ferror-limit=500, CompilationDatabase: %s, Compiler: g++}\nDiagnostics:\n  ClangTidy: {Add: modernize*, Remove: modernize-use-trailing-return-type}";
 	private static final String DEFAULT_CDB_SETTING = "CompileFlags: {CompilationDatabase: %s}";
-	private static final String MODIFIED_DEFAULT_CDB_SETTING = DEFAULT_CDB_SETTING + "\n";
-	private static final String INVALID_YAML_SYNTAX_CONTAINS_TAB = "CompileFlags:\n\tCompilationDatabase: %s";
-	private static final String INVALID_YAML_SYNTAX_MISSING_BRACE = "CompileFlags: {CompilationDatabase: Release\r\n";
-	private final ClangdCProjectDescriptionListener clangdConfigurationManager = PlatformUI.getWorkbench()
-			.getService(ClangdCProjectDescriptionListener.class);
+	private final ClangdCompilationDatabaseSetter clangdCompilationDatabaseSetter = new ClangdCompilationDatabaseSetter();
 	private IProject project;
 
 	private static CProjectDescriptionEvent event = mock(CProjectDescriptionEvent.class);
@@ -91,7 +88,8 @@ final class ClangdConfigurationFileManagerTest {
 	}
 
 	private static File createFile(File parent, String format, String cdbDirectoryPath) throws FileNotFoundException {
-		return createFile(parent, ClangdConfigurationFileManager.CLANGD_CONFIG_FILE_NAME, format, cdbDirectoryPath);
+		return createFile(parent, ClangdCompilationDatabaseSetterBase.CLANGD_CONFIG_FILE_NAME, format,
+				cdbDirectoryPath);
 	}
 
 	private static File createFile(File parent, String fileName, String format, String cdbDirectoryPath)
@@ -114,7 +112,7 @@ final class ClangdConfigurationFileManagerTest {
 	 */
 	private IFile createConfigFile(String format, String cdbDirectoryPath)
 			throws UnsupportedEncodingException, IOException, CoreException {
-		var file = project.getFile(ClangdConfigurationFileManager.CLANGD_CONFIG_FILE_NAME);
+		var file = project.getFile(ClangdCompilationDatabaseSetterBase.CLANGD_CONFIG_FILE_NAME);
 		try (final var data = new ByteArrayInputStream(
 				String.format(format, cdbDirectoryPath).getBytes(project.getDefaultCharset()))) {
 			if (!file.exists()) {
@@ -132,27 +130,29 @@ final class ClangdConfigurationFileManagerTest {
 	 *
 	 * @throws IOException
 	 * @throws CoreException
+	 * @throws InterruptedException
+	 * @throws OperationCanceledException
 	 */
 	@Test
-	void testCreateClangdConfigFileInProject() throws IOException, CoreException {
+	void testCreateClangdConfigFileInProject()
+			throws IOException, CoreException, OperationCanceledException, InterruptedException {
 		var projectDir = project.getLocation().toPortableString();
-		var configFile = new File(projectDir, ClangdConfigurationFileManager.CLANGD_CONFIG_FILE_NAME);
-		var refFile = createFile(TEMP_DIR, DEFAULT_CDB_SETTING, RELATIVE_DIR_PATH_BUILD_DEFAULT);
+		var configFile = new File(projectDir, ClangdCompilationDatabaseSetterBase.CLANGD_CONFIG_FILE_NAME);
 		// The current working directory of the builder in the project is set to RELATIVE_DIR_PATH_BUILD_DEFAULT:
 		cwdBuilder = new Path(project.getLocation().append(RELATIVE_DIR_PATH_BUILD_DEFAULT).toPortableString());
 		when(setting.getBuilderCWD()).thenReturn(cwdBuilder);
 
 		// GIVEN a project without .clangd project configuration file:
 		assertTrue(configFile.length() == 0);
-		// WHEN the ClangdConfigurationManager.handleEvent method gets called:
-		clangdConfigurationManager.handleEvent(event);
+		// WHEN the ClangdCProjectDescriptionListenerHandler.cProjectDescriptionEventHandler method gets called:
+		var optJob = clangdCompilationDatabaseSetter.cProjectDescriptionEventHandler(event);
+		assertTrue(optJob.isPresent(), "No 'Update .clangd' job has been created!");
+		optJob.get().join(5000, new NullProgressMonitor());
 		// THEN a new file has been created in the project:
 		assertTrue(configFile.length() > 0);
 		// AND the file content is as expected:
-		assertTrue(Arrays.equals(Files.readAllBytes(configFile.toPath()), Files.readAllBytes(refFile.toPath())));
-
-		//clean up:
-		refFile.delete();
+		assertEquals(String.format(DEFAULT_CDB_SETTING, RELATIVE_DIR_PATH_BUILD_DEFAULT).replaceAll("\\R", "\n"),
+				Files.readString(configFile.toPath()).replaceAll("\\R", "\n"));
 	}
 
 	/**
@@ -160,24 +160,25 @@ final class ClangdConfigurationFileManagerTest {
 	 *
 	 * @throws IOException
 	 * @throws CoreException
+	 * @throws InterruptedException
+	 * @throws OperationCanceledException
 	 */
 	@Test
-	void testEmptyClangdConfigFileInProject() throws IOException, CoreException {
-		var refFile = createFile(TEMP_DIR, DEFAULT_CDB_SETTING, RELATIVE_DIR_PATH_BUILD_DEFAULT);
+	void testEmptyClangdConfigFileInProject()
+			throws IOException, CoreException, OperationCanceledException, InterruptedException {
 		// The current working directory of the builder in the project is set to RELATIVE_DIR_PATH_BUILD_DEFAULT:
 		cwdBuilder = new Path(project.getLocation().append(RELATIVE_DIR_PATH_BUILD_DEFAULT).toPortableString());
 		when(setting.getBuilderCWD()).thenReturn(cwdBuilder);
 
 		// GIVEN an existing but empty .clangd configuration file in the project:
 		var emptyConfigFile = createConfigFile("%s", "  ");
-		// WHEN the ClangdConfigurationManager.handleEvent method gets called with a new cdb path "build/debug":
-		clangdConfigurationManager.handleEvent(event);
+		// WHEN the ClangdCompilationDatabaseSetter.cProjectDescriptionEventHandler method gets called:
+		var optJob = clangdCompilationDatabaseSetter.cProjectDescriptionEventHandler(event);
+		assertTrue(optJob.isPresent(), "No 'Update .clangd' job has been created!");
+		optJob.get().join(5000, new NullProgressMonitor());
 		// THEN the updated file matches the expected content with the given CompilationDatabase directory "build/debug":
-		assertTrue(Arrays.equals(Files.readAllBytes(emptyConfigFile.getLocation().toFile().toPath()),
-				Files.readAllBytes(refFile.toPath())));
-
-		//clean up:
-		refFile.delete();
+		assertEquals(String.format(DEFAULT_CDB_SETTING, RELATIVE_DIR_PATH_BUILD_DEFAULT).replaceAll("\\R", "\n"),
+				Files.readString(emptyConfigFile.getLocation().toFile().toPath()).replaceAll("\\R", "\n"));
 	}
 
 	/**
@@ -185,40 +186,43 @@ final class ClangdConfigurationFileManagerTest {
 	 *
 	 * @throws IOException
 	 * @throws CoreException
+	 * @throws InterruptedException
+	 * @throws OperationCanceledException
 	 */
 	@Test
-	void testUpdateClangdConfigFileInProject() throws IOException, CoreException {
+	void testUpdateClangdConfigFileInProject()
+			throws IOException, CoreException, OperationCanceledException, InterruptedException {
 		var projectDir = project.getLocation().toPortableString();
-		var configFile = new File(projectDir, ClangdConfigurationFileManager.CLANGD_CONFIG_FILE_NAME);
-		var refFileDefault = createFile(TEMP_DIR, ".clangdDefault", DEFAULT_CDB_SETTING,
-				RELATIVE_DIR_PATH_BUILD_DEFAULT);
-		// Use MODIFIED_DEFAULT_CDB_SETTING here, because the org.yaml.snakeyaml.Yaml.dump appends a '\n' at the last line:
-		var refFileDebug = createFile(TEMP_DIR, ".clangdDebug", MODIFIED_DEFAULT_CDB_SETTING,
-				RELATIVE_DIR_PATH_BUILD_DEBUG);
+		var configFile = new File(projectDir, ClangdCompilationDatabaseSetterBase.CLANGD_CONFIG_FILE_NAME);
+
 		// The current working directory of the builder in the project is set to RELATIVE_DIR_PATH_BUILD_DEFAULT:
 		cwdBuilder = new Path(project.getLocation().append(RELATIVE_DIR_PATH_BUILD_DEFAULT).toPortableString());
 		when(setting.getBuilderCWD()).thenReturn(cwdBuilder);
 
 		// GIVEN a project without .clangd project configuration file:
 		assertTrue(configFile.length() == 0);
-		// AND the ClangdConfigurationManager.handleEvent method gets called:
-		clangdConfigurationManager.handleEvent(event);
+		// AND the ClangdCompilationDatabaseSetter.cProjectDescriptionEventHandler method gets called:
+		var optJob = clangdCompilationDatabaseSetter.cProjectDescriptionEventHandler(event);
+		assertTrue(optJob.isPresent(), "No 'Update .clangd' job has been created!");
+		optJob.get().join(5000, new NullProgressMonitor());
 		// THEN a new file has been created in the project:
 		assertTrue(configFile.length() > 0);
 		// THEN the created file matches the expected content:
-		assertTrue(Arrays.equals(Files.readAllBytes(configFile.toPath()), Files.readAllBytes(refFileDefault.toPath())));
+		var expected = String.format(DEFAULT_CDB_SETTING, RELATIVE_DIR_PATH_BUILD_DEFAULT);
+		var actual = Files.readString(configFile.toPath());
+		assertEquals(expected.replaceAll("\\R", "\n"), Files.readString(configFile.toPath()).replaceAll("\\R", "\n"));
 
 		// WHEN the CWD in the build configuration changes to build/debug:
 		cwdBuilder = new Path(project.getLocation().append(RELATIVE_DIR_PATH_BUILD_DEBUG).toPortableString());
 		when(setting.getBuilderCWD()).thenReturn(cwdBuilder);
-		// AND the handleEvent gets called again:
-		clangdConfigurationManager.handleEvent(event);
+		// AND the cProjectDescriptionEventHandler method gets called again:
+		optJob = clangdCompilationDatabaseSetter.cProjectDescriptionEventHandler(event);
+		assertTrue(optJob.isPresent(), "No 'Update .clangd' job has been created!");
+		optJob.get().join(5000, new NullProgressMonitor());
 		// THEN the updated file matches the expected content:
-		assertTrue(Arrays.equals(Files.readAllBytes(configFile.toPath()), Files.readAllBytes(refFileDebug.toPath())));
-
-		//clean up:
-		refFileDefault.delete();
-		refFileDebug.delete();
+		expected = String.format(DEFAULT_CDB_SETTING, RELATIVE_DIR_PATH_BUILD_DEBUG);
+		actual = Files.readString(configFile.toPath());
+		assertEquals(expected.replaceAll("\\R", "\n"), actual.replaceAll("\\R", "\n"));
 	}
 
 	/**
@@ -226,71 +230,24 @@ final class ClangdConfigurationFileManagerTest {
 	 *
 	 * @throws IOException
 	 * @throws CoreException
+	 * @throws InterruptedException
+	 * @throws OperationCanceledException
 	 */
 	@Test
-	void testUpdateExpandedClangdConfigFileInProject() throws IOException, CoreException {
-		var refFile = createFile(TEMP_DIR, EXPANDED_CDB_SETTING, RELATIVE_DIR_PATH_BUILD_DEBUG);
-
+	void testUpdateExpandedClangdConfigFileInProject()
+			throws IOException, CoreException, OperationCanceledException, InterruptedException {
 		// GIVEN an existing expanded .clangd configuration file in the project pointing to "build/default":
 		var configFile = createConfigFile(EXPANDED_CDB_SETTING, RELATIVE_DIR_PATH_BUILD_DEFAULT);
-		// WHEN the ClangdConfigurationManager.handleEvent method gets called and the builder CWD points to "build/debug":
+		// WHEN the ClangdCompilationDatabaseSetter.cProjectDescriptionEventHandler method gets called and the builder CWD points to "build/debug":
 		cwdBuilder = new Path(project.getLocation().append(RELATIVE_DIR_PATH_BUILD_DEBUG).toPortableString());
 		when(setting.getBuilderCWD()).thenReturn(cwdBuilder);
-		clangdConfigurationManager.handleEvent(event);
+		var optJob = clangdCompilationDatabaseSetter.cProjectDescriptionEventHandler(event);
+		assertTrue(optJob.isPresent(), "No 'Update .clangd' job has been created!");
+		optJob.get().join(5000, new NullProgressMonitor());
 		// THEN the updated file matches the expected content:
-		assertTrue(Arrays.equals(Files.readAllBytes(configFile.getLocation().toFile().toPath()),
-				Files.readAllBytes(refFile.toPath())));
-
-		//clean up:
-		refFile.delete();
-	}
-
-	/**
-	 * Test whether a ScannerException will be thrown if the file contains invalid yaml syntax (here: tab)
-	 *
-	 * @throws IOException
-	 * @throws CoreException
-	 */
-	@Test
-	void testInvalidYamlSyntax() throws IOException, CoreException {
-		// GIVEN an existing .clangd configuration file with invalid yaml syntax (contains tab):
-		var configFile = createConfigFile(INVALID_YAML_SYNTAX_CONTAINS_TAB, RELATIVE_DIR_PATH_BUILD_DEFAULT);
-		String beforeSet;
-		try (var inputStream = configFile.getContents()) {
-			beforeSet = new String(inputStream.readAllBytes());
-		}
-		// WHEN the ClangdConfigurationManager.setCompilationDatabasePath method gets called with a new cdb path "build/debug":
-		((ClangdConfigurationFileManager) clangdConfigurationManager).setCompilationDatabase(project,
-				RELATIVE_DIR_PATH_BUILD_DEBUG);
-		// THEN the file has not been changed, because the user shall fix the errors first:
-		try (var inputStream = configFile.getContents()) {
-			var afterSet = new String(inputStream.readAllBytes());
-			assertEquals(beforeSet, afterSet);
-		}
-	}
-
-	/**
-	 * Test whether a ParserException will be thrown if the file contains invalid yaml syntax (here: missing })
-	 *
-	 * @throws IOException
-	 * @throws CoreException
-	 */
-	@Test
-	void testInvalidYamlSyntax2() throws IOException, CoreException {
-		// GIVEN an existing .clangd configuration file with invalid yaml syntax (missing }):
-		var configFile = createConfigFile(INVALID_YAML_SYNTAX_MISSING_BRACE, RELATIVE_DIR_PATH_BUILD_DEFAULT);
-		String beforeSet;
-		try (var inputStream = configFile.getContents()) {
-			beforeSet = new String(inputStream.readAllBytes());
-		}
-		// WHEN the ClangdConfigurationManager.setCompilationDatabasePath method gets called with a new cdb path "build/debug":
-		((ClangdConfigurationFileManager) clangdConfigurationManager).setCompilationDatabase(project,
-				RELATIVE_DIR_PATH_BUILD_DEBUG);
-		// THEN the file has not been changed, because the user shall fix the errors first:
-		try (var inputStream = configFile.getContents()) {
-			var afterSet = new String(inputStream.readAllBytes());
-			assertEquals(beforeSet, afterSet);
-		}
+		var expectedContent = String.format(EXPANDED_CDB_SETTING, RELATIVE_DIR_PATH_BUILD_DEBUG);
+		var modifiedContent = Files.readString(configFile.getLocation().toFile().toPath());
+		assertEquals(expectedContent.replaceAll("\\R", "\n"), modifiedContent.replaceAll("\\R", "\n"));
 	}
 
 }
